--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section>
         <div class="search">
             <div class="search-bar">
-                <input id="input" type="text" placeholder="Search for a city or airport">
+                <input id="input" type="text" placeholder="Search for cities or airport">
             </div>
             <div class="add-city">
                 <button id="add" class="button">Add City</button>
